# ChangeLog for www-client/seamonkey-bin
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/seamonkey-bin/ChangeLog,v 1.31 2007/11/06 20:21:23 armin76 Exp $

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org> seamonkey-bin-1.1.6.ebuild:
  x86 stable wrt security #196480

*seamonkey-bin-1.1.6 (06 Nov 2007)

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  +seamonkey-bin-1.1.6.ebuild:
  Version bump

  23 Oct 2007; Christoph Mende <angelos@gentoo.org>
  seamonkey-bin-1.1.5.ebuild:
  Stable on amd64 wrt security bug #196480

  21 Oct 2007; Markus Meier <maekke@gentoo.org> seamonkey-bin-1.1.5.ebuild:
  x86 stable, security bug #196480

*seamonkey-bin-1.1.5 (19 Oct 2007)

  19 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  +seamonkey-bin-1.1.5.ebuild:
  Version bump

  17 Sep 2007; Raúl Porcel <armin76@gentoo.org> seamonkey-bin-1.1.4.ebuild:
  Fix icon, bug #192426, thanks to Pacho Ramos <pacho at condmat1 dot ciencias
  dot uniovi dotes>

  11 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  -seamonkey-bin-1.1.3.ebuild:
  old

  11 Aug 2007; Steve Dibb <beandog@gentoo.org> seamonkey-bin-1.1.4.ebuild:
  amd64 stable, security bug 187205

  06 Aug 2007; Raúl Porcel <armin76@gentoo.org> seamonkey-bin-1.1.4.ebuild:
  x86 stable wrt #187205

*seamonkey-bin-1.1.4 (05 Aug 2007)

  05 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  +seamonkey-bin-1.1.4.ebuild:
  Version bump wrt security #187205

  28 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  -seamonkey-bin-1.1.2.ebuild:
  old

  28 Jul 2007; Steve Dibb <beandog@gentoo.org> seamonkey-bin-1.1.3.ebuild:
  amd64 stable, security bug 185737

  23 Jul 2007; Raúl Porcel <armin76@gentoo.org> seamonkey-bin-1.1.3.ebuild:
  x86 stable wrt security #185737

*seamonkey-bin-1.1.3 (20 Jul 2007)

  20 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  files/icon/seamonkey-bin.desktop, +seamonkey-bin-1.1.3.ebuild: