@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/seamonkey-bin/Attic/seamonkey-bin-1.1.6.ebuild,v 1.2 2007/11/06 20:21:23 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/seamonkey-bin/Attic/seamonkey-bin-1.1.6.ebuild,v 1.3 2007/11/12 17:28:15 drac Exp $
 
 inherit eutils mozilla-launcher multilib
 
@@ -9,7 +9,7 @@ SRC_URI="http://releases.mozilla.org/pub/mozilla.org/seamonkey/releases/${PV}/se
 HOMEPAGE="http://www.mozilla.org/projects/seamonkey/"
 RESTRICT="strip"
 
-KEYWORDS="-* ~amd64 x86"
+KEYWORDS="-* amd64 x86"
 SLOT="0"
 LICENSE="MPL-1.1 GPL-2 LGPL-2.1"
 IUSE=""
