@@ -1,6 +1,9 @@
 # ChangeLog for www-client/seamonkey
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.98 2007/11/08 16:08:17 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.99 2007/11/12 17:27:15 drac Exp $
+
+  12 Nov 2007; Samuli Suominen <drac@gentoo.org> seamonkey-1.1.6.ebuild:
+  amd64 stable wrt security #196480
 
   08 Nov 2007; Jeroen Roovers <jer@gentoo.org> seamonkey-1.1.6.ebuild:
   Stable for HPPA (bug #196480).
