@@ -1,6 +1,9 @@
 # ChangeLog for www-client/seamonkey-bin
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/seamonkey-bin/ChangeLog,v 1.31 2007/11/06 20:21:23 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/seamonkey-bin/ChangeLog,v 1.32 2007/11/12 17:28:15 drac Exp $
+
+  12 Nov 2007; Samuli Suominen <drac@gentoo.org> seamonkey-bin-1.1.6.ebuild:
+  amd64 stable wrt security #196480
 
   06 Nov 2007; Raúl Porcel <armin76@gentoo.org> seamonkey-bin-1.1.6.ebuild:
   x86 stable wrt security #196480
